# hb-cut-player

./: .gitignore  CMakeLists.txt  README.md  hb-cut-player.sln
hb-cut-player/: Bitstream.h  MyVLCPlayer.aps  VLCInstance.cpp  VLCInstance.h  VLCListPlayer.cpp  VLCListPlayer.h  VLCPlayer.cpp  VLCPlayer.h  XAVIPlayer.cpp  XAVIPlayer.h  XAVIPlayer.qrc  XAVIPlayer.ui  file_cut_thread.cpp  file_cut_thread.h  file_job_manager.cpp  file_job_manager.h  hb-cut-player.vcxproj  hb-cut-player.vcxproj.filters  main.cpp  resource.h
hb-cut-player/GeneratedFiles/: qrc_XAVIPlayer.cpp  ui_XAVIPlayer.h
hb-cut-player/base/: AmfByteStream.h  BitWritter.h  DataBuffer.cpp  DataBuffer.h  Lock.cpp  Lock.h  SimpleThread.cpp  SimpleThread.h  TimeCounter.h  base.h  bit_stream.cpp  bit_stream.h  buf_unit_helper.cpp  buf_unit_helper.h  byte_stream.cpp  byte_stream.h  file_helper.cpp  file_helper.h  h264_frame_parser.cpp  h264_frame_parser.h  platform.h  process_helper.cpp  process_helper.h  simple_logger.cpp  simple_logger.h  str_helper.cpp  str_helper.h  typedefs.h
hb-cut-player/vlc/: libvlc.lib  libvlccore.lib
scripts/: build.ps1  gen_vlc_import_libs.ps1  render_app_icon.ps1
